# qt-desktop-background-window-sample

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  sample.qrc  samplewindow.cpp  samplewindow.h
